# perception-guardian

./: .example.env  .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
locales/: en.ftl  ru.ftl
migrations/: 20230914134107_create_settings.sql  20231003144553_create_greetings.sql
src/: config.rs  l10n.rs  main.rs  qna.rs  qwant.rs  redis.rs  responses.rs  settings.rs  utils.rs
